unpackaged/main/default/objects/User_Performance__c/fields/Urgency_and_Closing__c.field-meta.xml
<CustomField>
    <fullName>Urgency_and_Closing__c</fullName>
    <description>Did the employee build urgency into the call and set meaningful agreed next actions?</description>
    <inlineHelpText>Did the employee build urgency into the call and set meaningful agreed next actions?</inlineHelpText>
    <label>Urgency and Closing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>