unpackaged/main/default/objects/User_Performance__c/fields/Urgency_and_Closing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Urgency_and_Closing_Notes__c</fullName>
    <label>Urgency and Closing Notes</label>
    <type>TextArea</type>
</CustomField>