unpackaged/main/default/objects/User_Performance__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Input full year - eg 2021</description>
    <inlineHelpText>Input full year - eg 2021</inlineHelpText>
    <label>Period Review Year</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>