unpackaged/main/default/objects/User_Performance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Period_Review_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>